--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <!-- 2 -->
         <div class="main-content">
-            <h3 class="name">Sumit Harijan</h3>
-            <span><i class="fab fa-instagram"></i> codingsumit</span>
+            <h3 class="name">Anshul Arya</h3>
+            <span><i class="fab fa-instagram"></i>Anshularya7__</span>
             <h4 class="title">Frontend developer 👨‍💻</h4>
         </div>
         <!-- 3 -->
